--- a/cursusEN.html
+++ b/cursusEN.html
@@ -57,10 +57,11 @@
         <ul id="menu" class="five">
           <li><a href="index.html" title="Home"><span class="big">H</span>ome</a></li>
           <li><a href="Research.html" title="Research"><span class="big">R</span>esearch</a></li>
+		  <li><a href="publis.html" title="publis"><span class="big">P</span>ublications</a></li>
           <li><a href="Teaching.html" title="Teaching"><span class="big">T</span>eaching</a></li>
           <li><a href="cursusEN.html" title="CursusEN"><span class="big">C</span>V</a></li>
-    	  <!-- <li><a href="index.html" title="index"><span class="big">F</span>rançais</a></li> >
         </ul>
+   
 
 
     <!-- #page: holds all page content, as well as footer -->
